# Optimisation-Maghrebia

./: .gitignore  AGENTS.md  README.md  _cells_dump.txt  build_notebook_03.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: Socio économique 05_17_2026 01_14_54.xlsx  bct_short_rates_daily_2022_2025.xlsx  corporate_curves_weekly_2022_2025_standardized.xlsx  zc_zero_coupon_weekly_2022_2025_standardized.xlsx
data/processed/: apt_bounds_by_asset_class.csv  apt_expected_returns_scenarios.csv  apt_expected_returns_scenarios_final_table.csv  apt_factor_diagnostics.csv  apt_optimistic_factor_treatment.csv  (+18 more)
docs/: project_cleanup_report.md  tunisie_clearing_corporate_spreads.md
exports/: 02_optimisation_portefeuille.html  03_allocation_supplementaire_10MD.html  03_synthese_resultats_et_interpretation.html  notebook_02_optimisation_portefeuille.html  notebook_03_allocation_supplementaire_10MD.html  notebook_03_synthese_resultats.xlsx
notebooks/: 00_extract_tunisie_clearing_corporate_spreads.ipynb  02_optimisation_portefeuille.html  02_optimisation_portefeuille.ipynb  03_allocation_supplementaire_10MD.html  03_allocation_supplementaire_10MD.ipynb  03_synthese_resultats_et_interpretation.html  03_synthese_resultats_et_interpretation.ipynb
outputs/: 02_optimisation_portefeuille.html
scripts/: quality_check_notebook_02.py
tests/: test_allocation_10md.py  test_bond_valuation.py  test_corporate_bond_valuation.py  test_portfolio_loading.py  test_returns.py  test_risk_metrics.py  test_tunisie_clearing_pipeline.py  test_tunisie_yield_curve_pipeline.py
(+1728 files in other folders)
